loading=lazy nas imgs

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preload" href="assets/frango_1.jpg" as="image">
     <link rel="stylesheet" href="styles.css">
     <title>Frangosópolis</title>
   </head>
@@ -59,7 +60,7 @@
           </ul>
         </div>
 
-        <img src="assets/frango_1.jpg" alt="frango" />
+        <img src="assets/frango_1.jpg" alt="frango" loading="lazy" />
       </article>
     </section>
 
@@ -70,7 +71,7 @@
 
       <ul class="menu-grid">
         <li>
-          <img src="assets/frango_1.jpg" alt="frango1" />
+          <img src="assets/frango_1.jpg" alt="frango1" loading="lazy" />
           <span class="badge">Mais vendido</span>
           <h3>Frango Clássico</h3>
           <p>Frango assado com molho especial</p>
@@ -79,7 +80,7 @@
         </li>
 
         <li>
-          <img src="assets/frango_2.jpg" alt="frango2" />
+          <img src="assets/frango_2.jpg" alt="frango2" loading="lazy" />
           <h3>Frango Apimentado</h3>
           <p>Frango grelhado com tempero picante</p>
           <strong>R$ 32,90</strong>
@@ -87,7 +88,7 @@
         </li>
 
         <li>
-          <img src="assets/frango_3.jpg" alt="frango3" />
+          <img src="assets/frango_3.jpg" alt="frango3" loading="lazy" />
           <span class="badge">Novo</span>
           <h3>Frango ao Curry</h3>
           <p>Frango cozido em molho de curry aromático</p>
@@ -96,7 +97,7 @@
         </li>
 
         <li>
-          <img src="assets/frango_4.jpg" alt="frango4" />
+          <img src="assets/frango_4.jpg" alt="frango4" loading="lazy" />
           <h3>Frango com Ervas</h3>
           <p>Frango assado com ervas frescas</p>
           <strong>R$ 31,90</strong>
@@ -104,7 +105,7 @@
         </li>
 
         <li>
-          <img src="assets/frango_5.jpg" alt="frango5" />
+          <img src="assets/frango_5.jpg" alt="frango5" loading="lazy" />
             <h3>Frango Grelhado</h3>
           <p>Frango grelhado com ervas frescas</p>
           <strong>R$ 33,90</strong>
@@ -112,7 +113,7 @@
         </li>
 
         <li>
-          <img src="assets/frango_6.jpg" alt="frango6" />
+          <img src="assets/frango_6.jpg" alt="frango6" loading="lazy" />
           <h3>Frango Frito</h3>
           <p>Frango crocante frito na hora</p>
           <strong>R$ 28,90</strong>
@@ -121,7 +122,7 @@
     </section>
 
     <section id="sobre" class="sobre">
-        <img src="assets/cozinha.jpg" alt="cozinha">
+        <img src="assets/cozinha.jpg" alt="cozinha" loading="lazy">
         <article>
             <h2>Nossa tempero</h2>
             <p>Na Frangosópolis, utilizamos temperos artesanais e ingredientes frescos para criar pratos únicos e saborosos. Nossa cozinha é o coração da nossa história, onde cada prato é preparado com paixão e dedicação.</p>
