troca de nome do site

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preload" href="assets/frango_1.jpg" as="image">
     <link rel="stylesheet" href="styles.css">
-    <title>Frangosópolis</title>
+    <title>Frango Assado</title>
   </head>
   <body>
     <header>
-      <a href="" class="logo">Frangosópolis</a>
+      <a href="" class="logo">Frango Assado</a>
       
       <div class="hamburger">
         <span></span>
