--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
         
 
-        <p class="copy">&copy; 2026 Frangosópolis Assados Todos os direitos reservados.</p>
+        <p class="copy">&copy; 2026 Frango Assado | Todos os direitos reservados.</p>
     </footer>
 
     <script src="main.js">
