alteração em todos os nomes do site

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <footer id="contato">
         <section>
-            <h3>Frangosópolis</h3>
+            <h3>Frango Assado</h3>
             <p>O melhor frango assado do bairro</p>
         </section>
 
@@ -162,8 +162,8 @@
 
         <section>
             <h4>Siga-nos</h4>
-            <p>Instagram: @frangosopolis</p>
-            <p>Facebook: /frangosopolis</p>
+            <p>Instagram: @frango_assado</p>
+            <p>Facebook: /frango_assado</p>
         </section>
 
         
